src/transactsql/parser/transactsql_parser.go
// Code generated from TransactSQL.g4 by ANTLR 4.9. DO NOT EDIT.

package parser // TransactSQL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'SCHEMA'", "','", "'[PRIMARY]'", "'\"defaul\"'", "'.'", "'NONE'",
	"';'", "'QUOTED_IDENTIFIER'", "'OFF'", "", "'ADD'", "'ALLOW_PAGE_LOCKS'",
	"'ALLOW_ROW_LOCKS'", "'ALTER'", "'ANSI_NULLS'", "'ASC'", "'CHECK'", "'[char]'",
	"'CLUSTERED'", "'CONSTRAINT'", "'CREATE'", "'default'", "'DEFAULT_LANGUAGE'",
	"'DEFAULT_SCHEMA'", "'DESC'", "'='", "'FOR'", "'FOREIGN'", "'[geography]'",
	"'IGNORE_DUP_KEY'", "'[int]'", "'KEY'", "'('", "'['", "'LOGIN'", "'[money]'",
	"'NOCHECK'", "'NULL'", "'NOT'", "'NONCLUSTERED'", "'ON'", "'OPTIMIZE_FOR_SEQUENTIAL_KEY'",
	"'PAD_INDEX'", "'PRIMARY'", "'REFERENCES'", "']'", "')'", "'SHCEMA'", "'SET'",
	"'SID'", "'STATISTICS_INCREMENTAL'", "'STATISTICS_NORECOMPUTE'", "'TABLE'",
	"'TEXTIMAGE_ON'", "'UNIQUE'", "'USE'", "'USER'", "'[varchar]'", "'WITH'",
	"", "", "'GO'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "DigitSequence", "Add", "AllowPageLocks",
	"AllowRowLocks", "Alter", "AnsiNulls", "Asc", "Check", "CharType", "Clustered",
	"Constraint", "Create", "Default", "DefaultLanguage", "DefaultSchema",
	"Desc", "Equal", "For", "Foreign", "GeographyType", "IgnoreDupKey", "IntType",
	"Key", "LeftParen", "LeftBracket", "Login", "MoneyType", "NoCheck", "Null",
	"Not", "NonClustered", "On", "OptimizeForSequentialKey", "PadIndex", "Primary",
	"References", "RightBracket", "RightParen", "Schema", "Set", "Sid", "StatisticsIncremental",
	"StatisticsNoreCompute", "Table", "TextImageOn", "Unique", "Use", "User",
	"VarcharType", "With", "Identifier", "CharacterPart", "GoCommand", "IgnoredQuery",
	"Whitespace", "Newline", "BlockComment", "CharacterSequence",
}

var ruleNames = []string{
	"compilationUnit", "statementList", "statementAux", "statement", "typeName",
	"useDatabase", "createUserStatement", "createSchemaStatement", "setStatement",
	"createTableStatement", "alterTableStatement", "alterTableOption", "withCheckOption",
	"checkOption", "checkConstraint", "addConstraint", "createTableOptions",
	"columnDefinitionList", "columnDefinitions", "onClause", "textImageOnClause",
	"fileGroup", "defaultOption", "columnDefinition", "tableName", "dataType",
	"tableConstraint", "constraintClause", "typeKeyClause", "foreignKeyClause",
	"columnsTable", "columnNameList", "constraintKeyClause", "withIndexOption",
	"indexOptionList", "indexOption", "limitedOptionList", "userOption", "limitedOption",
	"defaultSchemaOption", "endSt", "dataBaseName", "padIndexOption", "ignoreDupKeyOption",
	"statisticsNoreComputeOption", "statisticsIncrementalOption", "allowRowLocksOption",
	"allowPageLocksOption", "optimizeForSequentialKeyOption", "setOptions",
	"onOffOption", "keyOption", "clusterOption", "orderOption", "forLoginExpression",
	"withlimitedOptionList", "typeOption", "columnOption", "schemaName", "columnName",
	"userName", "constraintName", "precision", "scale",
}

type TransactSQLParser struct {
	*antlr.BaseParser
}

// NewTransactSQLParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *TransactSQLParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewTransactSQLParser(input antlr.TokenStream) *TransactSQLParser {
	this := new(TransactSQLParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TransactSQL.g4"

	return this
}

// TransactSQLParser tokens.
const (
	TransactSQLParserEOF                      = antlr.TokenEOF
	TransactSQLParserT__0                     = 1
	TransactSQLParserT__1                     = 2
	TransactSQLParserT__2                     = 3
	TransactSQLParserT__3                     = 4
	TransactSQLParserT__4                     = 5
	TransactSQLParserT__5                     = 6
	TransactSQLParserT__6                     = 7
	TransactSQLParserT__7                     = 8
	TransactSQLParserT__8                     = 9
	TransactSQLParserDigitSequence            = 10
	TransactSQLParserAdd                      = 11
	TransactSQLParserAllowPageLocks           = 12
	TransactSQLParserAllowRowLocks            = 13
	TransactSQLParserAlter                    = 14
	TransactSQLParserAnsiNulls                = 15
	TransactSQLParserAsc                      = 16
	TransactSQLParserCheck                    = 17
	TransactSQLParserCharType                 = 18
	TransactSQLParserClustered                = 19
	TransactSQLParserConstraint               = 20
	TransactSQLParserCreate                   = 21
	TransactSQLParserDefault                  = 22
	TransactSQLParserDefaultLanguage          = 23
	TransactSQLParserDefaultSchema            = 24
	TransactSQLParserDesc                     = 25
	TransactSQLParserEqual                    = 26
	TransactSQLParserFor                      = 27
	TransactSQLParserForeign                  = 28
	TransactSQLParserGeographyType            = 29
	TransactSQLParserIgnoreDupKey             = 30
	TransactSQLParserIntType                  = 31
	TransactSQLParserKey                      = 32
	TransactSQLParserLeftParen                = 33
	TransactSQLParserLeftBracket              = 34
	TransactSQLParserLogin                    = 35
	TransactSQLParserMoneyType                = 36
	TransactSQLParserNoCheck                  = 37
	TransactSQLParserNull                     = 38
	TransactSQLParserNot                      = 39
	TransactSQLParserNonClustered             = 40
	TransactSQLParserOn                       = 41
	TransactSQLParserOptimizeForSequentialKey = 42
	TransactSQLParserPadIndex                 = 43
	TransactSQLParserPrimary                  = 44
	TransactSQLParserReferences               = 45
	TransactSQLParserRightBracket             = 46
	TransactSQLParserRightParen               = 47
	TransactSQLParserSchema                   = 48
	TransactSQLParserSet                      = 49
	TransactSQLParserSid                      = 50
	TransactSQLParserStatisticsIncremental    = 51
	TransactSQLParserStatisticsNoreCompute    = 52
	TransactSQLParserTable                    = 53
	TransactSQLParserTextImageOn              = 54
	TransactSQLParserUnique                   = 55
	TransactSQLParserUse                      = 56
	TransactSQLParserUser                     = 57
	TransactSQLParserVarcharType              = 58
	TransactSQLParserWith                     = 59
	TransactSQLParserIdentifier               = 60
	TransactSQLParserCharacterPart            = 61
	TransactSQLParserGoCommand                = 62
	TransactSQLParserIgnoredQuery             = 63
	TransactSQLParserWhitespace               = 64
	TransactSQLParserNewline                  = 65
	TransactSQLParserBlockComment             = 66
	TransactSQLParserCharacterSequence        = 67
)

// TransactSQLParser rules.
const (
	TransactSQLParserRULE_compilationUnit                = 0
	TransactSQLParserRULE_statementList                  = 1
	TransactSQLParserRULE_statementAux                   = 2
	TransactSQLParserRULE_statement                      = 3
	TransactSQLParserRULE_typeName                       = 4
	TransactSQLParserRULE_useDatabase                    = 5
	TransactSQLParserRULE_createUserStatement            = 6
	TransactSQLParserRULE_createSchemaStatement          = 7
	TransactSQLParserRULE_setStatement                   = 8
	TransactSQLParserRULE_createTableStatement           = 9
	TransactSQLParserRULE_alterTableStatement            = 10
	TransactSQLParserRULE_alterTableOption               = 11
	TransactSQLParserRULE_withCheckOption                = 12
	TransactSQLParserRULE_checkOption                    = 13
	TransactSQLParserRULE_checkConstraint                = 14
	TransactSQLParserRULE_addConstraint                  = 15
	TransactSQLParserRULE_createTableOptions             = 16
	TransactSQLParserRULE_columnDefinitionList           = 17
	TransactSQLParserRULE_columnDefinitions              = 18
	TransactSQLParserRULE_onClause                       = 19
	TransactSQLParserRULE_textImageOnClause              = 20
	TransactSQLParserRULE_fileGroup                      = 21
	TransactSQLParserRULE_defaultOption                  = 22
	TransactSQLParserRULE_columnDefinition               = 23
	TransactSQLParserRULE_tableName                      = 24
	TransactSQLParserRULE_dataType                       = 25
	TransactSQLParserRULE_tableConstraint                = 26
	TransactSQLParserRULE_constraintClause               = 27
	TransactSQLParserRULE_typeKeyClause                  = 28
	TransactSQLParserRULE_foreignKeyClause               = 29
	TransactSQLParserRULE_columnsTable                   = 30
	TransactSQLParserRULE_columnNameList                 = 31
	TransactSQLParserRULE_constraintKeyClause            = 32
	TransactSQLParserRULE_withIndexOption                = 33
	TransactSQLParserRULE_indexOptionList                = 34
	TransactSQLParserRULE_indexOption                    = 35
	TransactSQLParserRULE_limitedOptionList              = 36
	TransactSQLParserRULE_userOption                     = 37
	TransactSQLParserRULE_limitedOption                  = 38
	TransactSQLParserRULE_defaultSchemaOption            = 39
	TransactSQLParserRULE_endSt                          = 40
	TransactSQLParserRULE_dataBaseName                   = 41
	TransactSQLParserRULE_padIndexOption                 = 42
	TransactSQLParserRULE_ignoreDupKeyOption             = 43
	TransactSQLParserRULE_statisticsNoreComputeOption    = 44
	TransactSQLParserRULE_statisticsIncrementalOption    = 45
	TransactSQLParserRULE_allowRowLocksOption            = 46
	TransactSQLParserRULE_allowPageLocksOption           = 47
	TransactSQLParserRULE_optimizeForSequentialKeyOption = 48
	TransactSQLParserRULE_setOptions                     = 49
	TransactSQLParserRULE_onOffOption                    = 50
	TransactSQLParserRULE_keyOption                      = 51
	TransactSQLParserRULE_clusterOption                  = 52
	TransactSQLParserRULE_orderOption                    = 53
	TransactSQLParserRULE_forLoginExpression             = 54
	TransactSQLParserRULE_withlimitedOptionList          = 55
	TransactSQLParserRULE_typeOption                     = 56
	TransactSQLParserRULE_columnOption                   = 57
	TransactSQLParserRULE_schemaName                     = 58
	TransactSQLParserRULE_columnName                     = 59
	TransactSQLParserRULE_userName                       = 60
	TransactSQLParserRULE_constraintName                 = 61
	TransactSQLParserRULE_precision                      = 62
	TransactSQLParserRULE_scale                          = 63
)

// ICompilationUnitContext is an interface to support dynamic dispatch.
type ICompilationUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCompilationUnitContext differentiates from other interfaces.
	IsCompilationUnitContext()
}

type CompilationUnitContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompilationUnitContext() *CompilationUnitContext {
	var p = new(CompilationUnitContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TransactSQLParserRULE_compilationUnit
	return p
}

func (*CompilationUnitContext) IsCompilationUnitContext() {}

func NewCompilationUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompilationUnitContext {
	var p = new(CompilationUnitContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactSQLParserRULE_compilationUnit

	return p
}

func (s *CompilationUnitContext) GetParser() antlr.Parser { return s.parser }

func (s *CompilationUnitContext) EOF() antlr.TerminalNode {
	return s.GetToken(TransactSQLParserEOF, 0)
}

func (s *CompilationUnitContext) StatementList() IStatementListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *CompilationUnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompilationUnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompilationUnitContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.EnterCompilationUnit(s)
	}
}

func (s *CompilationUnitContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.ExitCompilationUnit(s)
	}
}

func (p *TransactSQLParser) CompilationUnit() (localctx ICompilationUnitContext) {
	localctx = NewCompilationUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TransactSQLParserRULE_compilationUnit)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(129)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TransactSQLParserAlter || _la == TransactSQLParserCreate || _la == TransactSQLParserSet || _la == TransactSQLParserUse {
		{
			p.SetState(128)
			p.StatementList()
		}

	}
	{
		p.SetState(131)
		p.Match(TransactSQLParserEOF)
	}

	return localctx
}

// IStatementListContext is an interface to support dynamic dispatch.
type IStatementListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementListContext differentiates from other interfaces.
	IsStatementListContext()
}

type StatementListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementListContext() *StatementListContext {
	var p = new(StatementListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TransactSQLParserRULE_statementList
	return p
}

func (*StatementListContext) IsStatementListContext() {}

func NewStatementListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementListContext {
	var p = new(StatementListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactSQLParserRULE_statementList

	return p
}

func (s *StatementListContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementListContext) AllStatementAux() []IStatementAuxContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementAuxContext)(nil)).Elem())
	var tst = make([]IStatementAuxContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementAuxContext)
		}
	}

	return tst
}

func (s *StatementListContext) StatementAux(i int) IStatementAuxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementAuxContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementAuxContext)
}

func (s *StatementListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementListContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.EnterStatementList(s)
	}
}

func (s *StatementListContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.ExitStatementList(s)
	}
}

func (p *TransactSQLParser) StatementList() (localctx IStatementListContext) {
	localctx = NewStatementListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TransactSQLParserRULE_statementList)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(134)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == TransactSQLParserAlter || _la == TransactSQLParserCreate || _la == TransactSQLParserSet || _la == TransactSQLParserUse {
		{
			p.SetState(133)
			p.StatementAux()
		}

		p.SetState(136)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStatementAuxContext is an interface to support dynamic dispatch.
type IStatementAuxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementAuxContext differentiates from other interfaces.
	IsStatementAuxContext()
}

type StatementAuxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementAuxContext() *StatementAuxContext {
	var p = new(StatementAuxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TransactSQLParserRULE_statementAux
	return p
}

func (*StatementAuxContext) IsStatementAuxContext() {}

func NewStatementAuxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementAuxContext {
	var p = new(StatementAuxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactSQLParserRULE_statementAux

	return p
}

func (s *StatementAuxContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementAuxContext) Statement() IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *StatementAuxContext) GoCommand() antlr.TerminalNode {
	return s.GetToken(TransactSQLParserGoCommand, 0)
}

func (s *StatementAuxContext) EndSt() IEndStContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEndStContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEndStContext)
}

func (s *StatementAuxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementAuxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementAuxContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.EnterStatementAux(s)
	}
}

func (s *StatementAuxContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.ExitStatementAux(s)
	}
}

func (p *TransactSQLParser) StatementAux() (localctx IStatementAuxContext) {
	localctx = NewStatementAuxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TransactSQLParserRULE_statementAux)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(138)
		p.Statement()
	}
	p.SetState(140)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TransactSQLParserGoCommand {
		{
			p.SetState(139)
			p.Match(TransactSQLParserGoCommand)
		}

	}
	p.SetState(143)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TransactSQLParserT__6 {
		{
			p.SetState(142)
			p.EndSt()
		}

	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TransactSQLParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TransactSQLParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) UseDatabase() IUseDatabaseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUseDatabaseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUseDatabaseContext)
}

func (s *StatementContext) CreateSchemaStatement() ICreateSchemaStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateSchemaStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateSchemaStatementContext)
}

func (s *StatementContext) CreateUserStatement() ICreateUserStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateUserStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateUserStatementContext)
}

func (s *StatementContext) SetStatement() ISetStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISetStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISetStatementContext)
}

func (s *StatementContext) CreateTableStatement() ICreateTableStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ICreateTableStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ICreateTableStatementContext)
}

func (s *StatementContext) AlterTableStatement() IAlterTableStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAlterTableStatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAlterTableStatementContext)
}

func (s *StatementContext) EndSt() IEndStContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEndStContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEndStContext)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TransactSQLListener); ok {
		listenerT.ExitStatement(s)
	}
}
